# icd-dev-bureau

./: .gitignore  DESIGN.md  README.md  REPORT_phase0.md  pyproject.toml  requirements.txt
collector/: db.py  fetch.py  init_db.py  sources.yaml
collector/fetchers/: base.py  custom.py  hf_api.py  rss.py
tests/: test_db.py  test_fetchers.py
ui/: prefilter.py
